[package]
name = "webrender_api"
version = "0.55.0"
authors = ["Glenn Watson <gw@intuitionlibrary.com>"]
license = "MPL-2.0"
repository = "https://github.com/servo/webrender"

[features]
nightly = ["euclid/unstable", "serde/unstable"]
ipc = ["ipc-channel"]

[dependencies]
app_units = "0.5.6"
bitflags = "1.0"
bincode = "0.9"
byteorder = "1.2.1"
euclid = "0.15"
ipc-channel = {version = "0.9", optional = true}
serde = { version = "1.0", features = ["rc", "derive"] }
time = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.4.6"
core-graphics = "0.12.3"

[target.'cfg(target_os = "windows")'.dependencies]
dwrote = "0.4.1"
