[package]
name = "webrender_api"
version = "0.56.1"
authors = ["Glenn Watson <gw@intuitionlibrary.com>"]
license = "MPL-2.0"
repository = "https://github.com/servo/webrender"

[features]
nightly = ["euclid/unstable", "serde/unstable"]
ipc = ["ipc-channel"]
debug-serialization = []

[dependencies]
app_units = "0.6"
bitflags = "1.0"
bincode = "0.9"
byteorder = "1.2.1"
euclid = "0.16"
ipc-channel = {version = "0.9", optional = true}
serde = { version = "=1.0.27", features = ["rc"] }
serde_derive = { version = "=1.0.27", features = ["deserialize_in_place"] }
time = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.4.6"
core-graphics = "0.12.3"

[target.'cfg(target_os = "windows")'.dependencies]
dwrote = "0.4.1"
