[package]
name = "webrender_bindings"
version = "0.1.0"
authors = ["The Mozilla Project Developers"]
license = "MPL-2.0"

[features]
webrender_debugger = ["webrender/debugger"]

[dependencies]
rayon = "1"
num_cpus = "1.7.0"
tracy-rs = "0.1"
euclid = { version = "0.20.8", features = ["serde"] }
app_units = "0.7"
gleam = "0.10.0"
log = "0.4"
nsstring = { path = "../../xpcom/rust/nsstring" }
bincode = "1.0"
uuid = { version = "0.8", features = ["v4"] }
fxhash = "0.2.1"
thin-vec = { version = "0.1.0", features = ["gecko-ffi"] }
swgl = { path = "../wr/swgl" }

[dependencies.webrender]
path = "../wr/webrender"
version = "0.61.0"
default-features = false
features = ["capture", "serialize_program"]

[target.'cfg(target_os = "windows")'.dependencies]
dwrote = "0.9"
dirs = "1.0"
winapi = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.6"
core-graphics = "0.17.1"
foreign-types = "0.3.0"

