[package]
name = "webrender_traits"
version = "0.9.0"
authors = ["Glenn Watson <gw@intuitionlibrary.com>"]
license = "MPL-2.0"
repository = "https://github.com/servo/webrender"
build = "build.rs"
workspace = ".."

[features]
default = ["codegen"]
nightly = ["euclid/unstable", "serde/unstable"]
codegen = ["serde_codegen", "serde_codegen/with-syntex"]

[dependencies]
app_units = "0.3.0"
byteorder = "0.5"
euclid = "0.10"
gleam = "0.2.22"
heapsize = "0.3.6"
offscreen_gl_context = {version = "0.5.0", features = ["serde_serialization"]}
serde = "0.8"
serde_derive = {version = "0.8", optional = true}
ipc-channel = "0.5.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
dwrote = "0.1.0"

[build-dependencies.serde_codegen]
version = "0.8"
default_features = false
optional = true
