[package]
name = "webrender_traits"
version = "0.20.0"
authors = ["Glenn Watson <gw@intuitionlibrary.com>"]
license = "MPL-2.0"
repository = "https://github.com/servo/webrender"
build = "build.rs"

[features]
default = ["codegen"]
nightly = ["euclid/unstable", "serde/unstable"]
codegen = ["serde_codegen", "serde_codegen/with-syntex"]
ipc = ["ipc-channel"]

[dependencies]
app_units = "0.4"
byteorder = "1.0"
euclid = "0.11"
gleam = "0.2"
heapsize = "0.3.6"
ipc-channel = {version = "0.7", optional = true}
offscreen_gl_context = {version = "0.6", features = ["serde"]}
serde = "0.9"
serde_derive = {version = "0.9", optional = true}

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.7"

[target.'cfg(target_os = "windows")'.dependencies]
servo-dwrote = "0.2"

[build-dependencies.serde_codegen]
version = "0.9"
default_features = false
optional = true
