[package]
name = "webrender_traits"
version = "0.40.0"
authors = ["Glenn Watson <gw@intuitionlibrary.com>"]
license = "MPL-2.0"
repository = "https://github.com/servo/webrender"

[features]
nightly = ["euclid/unstable", "serde/unstable"]
ipc = ["ipc-channel"]
webgl = ["offscreen_gl_context"]

[dependencies]
app_units = "0.4"
bincode = "1.0.0-alpha2"
byteorder = "1.0"
euclid = "0.13"
gleam = "0.4.5"
heapsize = ">= 0.3.6, < 0.5"
ipc-channel = {version = "0.7.2", optional = true}
offscreen_gl_context = {version = "0.8", features = ["serde"], optional = true}
serde = "0.9"
serde_derive = "0.9"
time = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.3"
core-graphics = "0.7"

[target.'cfg(target_os = "windows")'.dependencies]
dwrote = "0.3"
