[workspace]
members = [
    "direct-composition",
    "examples",
    "webrender",
    "webrender_api",
    "wrench",
]

[profile.release]
debug = true
panic = "abort"

[profile.dev]
panic = "abort"

[patch.crates-io]
serde_derive = { git = "https://github.com/servo/serde", branch = "deserialize_from_enums10" }
