[package]
name = "encoding_glue"
description = "FFI functions for mozilla::Encoding that aren't appropriate to share on crates.io due to m-c dependencies"
version = "0.1.0"
authors = ["Henri Sivonen <hsivonen@hsivonen.fi>"]
license = "MIT/Apache-2.0"

[features]
simd-accel = ["encoding_rs/simd-accel"]

[dependencies]
encoding_rs = "0.8.0"
nsstring = { path = "../../servo/support/gecko/nsstring" }
nserror = { path = "../../xpcom/rust/nserror" }
