[package]
name = "js"
version = "0.1.4"
authors = ["The Servo Project Developers"]
build = "build.rs"
license = "MPL-2.0"

[build-dependencies]
env_logger = {version = "0.6", default-features = false} # disable `regex` to reduce code size
bindgen = {version = "0.51", default-features = false} # disable `logging` to reduce code size
cmake = "0.1"
glob = "0.2.11"

[[test]]
name = "bigint"
required-features = ["bigint"]
[[test]]
name = "callback"
[[test]]
name = "enumerate"
[[test]]
name = "evaluate"
[[test]]
name = "panic"
[[test]]
name = "rooting"
[[test]]
name = "runtime"
[[test]]
name = "typedarray"
[[test]]
name = "stack_limit"
[[test]]
name = "value"
[[test]]
name = "vec_conversion"

[lib]
doctest = false

[features]
debugmozjs = ['mozjs_sys/debugmozjs']
promises = ['mozjs_sys/promises']
nonzero = []
bigint = ['mozjs_sys/bigint']

[dependencies.mozjs_sys]
path = "../src"

[dependencies]
lazy_static = "1.0"
libc = "0.2"
log = "0.4"
num-traits = "0.1.32"
