[package]
name = "mozjs_sys"
version = "0.0.0"
authors = ["Mozilla"]
links = "mozjs"
build = "build.rs"

[features]
debugmozjs = []
promises = []
bigint = []

[lib]
name = "mozjs_sys"
path = "lib.rs"

[build-dependencies]
num_cpus = "1.1.0"
glob = "0.3"

[dependencies]
libc = "0.2"
libz-sys = "1.0.16"
