include $(top_srcdir)/common.mk

noinst_LIBRARIES = libjs2.a

libjs2_a_DEPENDENCIES = $(LIBFDLIBM)

libjs2_a_SOURCES = \
	bytecodegen.cpp \
	collector.cpp \
	exception.cpp \
	formatter.cpp \
	fdlibm_ns.cpp \
	hash.cpp \
	js2runtime.cpp \
	js2execution.cpp \
	jsarray.cpp \
	jsmath.cpp \
	jsstring.cpp \
	lexer.cpp \
	mem.cpp \
	numerics.cpp \
	parser.cpp \
	reader.cpp \
	strings.cpp \
	tracer.cpp \
	token.cpp \
	utilities.cpp \
	world.cpp
